@@ -1,6 +1,6 @@
 Package: wru
-Version: 0.1-3
-Date: 2017-4-10
+Version: 0.1-4
+Date: 2017-5-3
 Title: Who are You? Bayesian Prediction of Racial Category Using Surname and
     Geolocation
 Author: Kabir Khanna [aut, cre], Kosuke Imai [aut, cre], Hubert Jin [ctb]
